--- a/looper_V2.html
+++ b/looper_V2.html
@@ -48,13 +48,12 @@ const log = m => { status.textContent = m; console.log('[Looper]', m); };
 
 /* ── base + variations data ───────────────────────────────── */
 const baseTrack = {
-  id:'GTR', label:'🎸 Guitar', url:'https://kumbengo.github.io/groove-lab/GuitarLoop.wav'
+  id:'GTR', label:'🎸 Guitar', url:'https://kumbengo.github.io/groove-lab/Clave.wav'
 };
 
 const variations = [
   { id:'VAR1', label:'Variation A', url:'https://kumbengo.github.io/groove-lab/AfroPerc1.wav' },
-  { id:'VAR2', label:'Variation B', url:'https://kumbengo.github.io/groove-lab/AfroPerc2.wav' },
-  { id:'VAR3', label:'Variation C', url:'https://kumbengo.github.io/groove-lab/AfroPerc3.wav' }
+  { id:'VAR2', label:'Variation B', url:'https://kumbengo.github.io/groove-lab/AfroPerc2.wav' }
 ];
 
 /* ── state holders ───────────────────────────────────────── */
